# pyuit

./: .coveragerc  .gitignore  .stickler.yml  .travis.yml  MANIFEST.in  README.rst  coverage.cfg  environment.yml  pyproject.toml  setup.py  test.sh  tox.ini
.github/workflows/: black.yml  flake8.yml  lint_and_format.yml
conda.recipe/: meta.yaml
docs/source/: conf.py  index.rst  modules.rst
docs/source/modules/: PbsScript.rst
examples/: Untitled.ipynb  Working with PbsScript.ipynb  auth_inline.ipynb  auth_popup.ipynb  pyUIT Demo.ipynb  pyUIT GUI Tools Demo.ipynb  pyuit_dev_example.ipynb  test_topaz_login_nodes.ipynb
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  auth_inline-checkpoint.ipynb  basics-checkpoint.ipynb  test_topaz_login_nodes-checkpoint.ipynb
examples/data/: hello_world.pbs
pydocs/source/: conf.py
pydocs/source/modules/: Client.rst
tests/: __init__.py  test_cli.py  test_pbs_script.py  test_uit.py
uit/: __init__.py  __main__.py  async_client.py  async_testing_utils.py  config.py  exceptions.py  execution_block.py  job.py  mock_job.py  node_types.csv  panel_util.py  pbs_script.py  testing_utils.py  uit.py  util.py
uit/.ipynb_checkpoints/: testing_utils-checkpoint.py
uit/data/: DoD_CAs.pem
uit/gui_tools/: __init__.py  configurable.py  connect.py  file_browser.py  monitor.py  results.py  submit.py  utils.py
uit/panel_util/: __init__.py  connect.py  file_browser.py  monitor.py  submit.py
